// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single place and single stat var 1`] = `
"<div class=\\"chart-container dc-chart-holder\\">
  <div class=\\"card\\">
    <div class=\\"statVarChipRegion\\">
      <div class=\\"chip\\"><span class=\\"chip-text chip-clickable-text\\">Age</span><button class=\\"chip-action\\"><i class=\\"material-icons\\">cancel</i></button></div>
    </div>
    <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  </div>
  <div class=\\"chart-footer-container no-bottom-border\\">
    <div class=\\"chart-footer-metadata-section\\">
      <div class=\\"chart-footer-metadata\\"><span>Data from <span><a href=\\"https://www.census.gov/\\">census.gov</a></span></span></div>
      <div class=\\"chart-footer-metadata\\"><span>Measurement method: CensusACS5yrSurvey</span></div>
    </div>
    <div class=\\"chart-footer-options-button\\"><span>Chart Options</span><i class=\\"material-icons\\">expand_less</i></div>
  </div>
  <div class=\\"chart-footer-options-section\\"><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"age-ratio\\" type=\\"checkbox\\" class=\\"form-check-input\\">Per Capita</label></div></span><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"delta-cb-age\\" type=\\"checkbox\\" class=\\"is-delta-input form-check-input\\">Delta</label></div></span><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button></div>
  <div class=\\"feedback-link\\"><a href=\\"/feedback\\">Feedback</a></div>
</div>"
`;

exports[`Single place and single stat var 2`] = `
"<div class=\\"chart-container dc-chart-holder\\">
  <div class=\\"card\\">
    <div class=\\"statVarChipRegion\\">
      <div class=\\"chip\\"><span class=\\"chip-text chip-clickable-text\\">Population</span><button class=\\"chip-action\\"><i class=\\"material-icons\\">cancel</i></button></div>
    </div>
    <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  </div>
  <div class=\\"chart-footer-container no-bottom-border\\">
    <div class=\\"chart-footer-metadata-section\\">
      <div class=\\"chart-footer-metadata\\"><span>Data from <span><a href=\\"https://www.census.gov/programs-surveys/popest.html\\">census.gov</a></span></span></div>
      <div class=\\"chart-footer-metadata\\"><span>Measurement method: CensusPEPSurvey</span></div>
    </div>
    <div class=\\"chart-footer-options-button\\"><span>Chart Options</span><i class=\\"material-icons\\">expand_less</i></div>
  </div>
  <div class=\\"chart-footer-options-section\\"><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"count-ratio\\" type=\\"checkbox\\" class=\\"form-check-input\\">Per Capita</label></div></span><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"delta-cb-count\\" type=\\"checkbox\\" class=\\"is-delta-input form-check-input\\">Delta</label></div></span><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button></div>
  <div class=\\"feedback-link\\"><a href=\\"/feedback\\">Feedback</a></div>
</div>
<div class=\\"chart-container dc-chart-holder\\">
  <div class=\\"card\\">
    <div class=\\"statVarChipRegion\\">
      <div class=\\"chip\\"><span class=\\"chip-text chip-clickable-text\\">Age</span><button class=\\"chip-action\\"><i class=\\"material-icons\\">cancel</i></button></div>
    </div>
    <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  </div>
  <div class=\\"chart-footer-container no-bottom-border\\">
    <div class=\\"chart-footer-metadata-section\\">
      <div class=\\"chart-footer-metadata\\"><span>Data from <span><a href=\\"https://www.census.gov/\\">census.gov</a></span></span></div>
      <div class=\\"chart-footer-metadata\\"><span>Measurement method: CensusACS5yrSurvey</span></div>
    </div>
    <div class=\\"chart-footer-options-button\\"><span>Chart Options</span><i class=\\"material-icons\\">expand_less</i></div>
  </div>
  <div class=\\"chart-footer-options-section\\"><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"age-ratio\\" type=\\"checkbox\\" class=\\"form-check-input\\">Per Capita</label></div></span><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"delta-cb-age\\" type=\\"checkbox\\" class=\\"is-delta-input form-check-input\\">Delta</label></div></span><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button></div>
  <div class=\\"feedback-link\\"><a href=\\"/feedback\\">Feedback</a></div>
</div>"
`;

exports[`Single place and single stat var 3`] = `
"<div class=\\"chart-container dc-chart-holder\\">
  <div class=\\"card\\">
    <div class=\\"statVarChipRegion\\">
      <div class=\\"chip\\"><span class=\\"chip-text chip-clickable-text\\">Population</span><button class=\\"chip-action\\"><i class=\\"material-icons\\">cancel</i></button></div>
    </div>
    <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  </div>
  <div class=\\"chart-footer-container no-bottom-border\\">
    <div class=\\"chart-footer-metadata-section\\">
      <div class=\\"chart-footer-metadata\\"><span>Data from <span><a href=\\"https://www.census.gov/programs-surveys/popest.html\\">census.gov</a></span></span></div>
      <div class=\\"chart-footer-metadata\\"><span>Measurement method: CensusPEPSurvey</span></div>
    </div>
    <div class=\\"chart-footer-options-button\\"><span>Chart Options</span><i class=\\"material-icons\\">expand_less</i></div>
  </div>
  <div class=\\"chart-footer-options-section\\"><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"count-ratio\\" type=\\"checkbox\\" class=\\"form-check-input\\">Per Capita</label></div></span><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"delta-cb-count\\" type=\\"checkbox\\" class=\\"is-delta-input form-check-input\\">Delta</label></div></span><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button></div>
  <div class=\\"feedback-link\\"><a href=\\"/feedback\\">Feedback</a></div>
</div>"
`;

exports[`Single place and single stat var 4`] = `
"<div class=\\"dc-chart-holder\\"><span class=\\"Collapsible__trigger is-open\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">remove</i><span class=\\"title selected-node-title\\">Demographics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\">
    <div class=\\"svg-node-child\\">
      <div>
        <form class=\\"node-title\\"><input id=\\"Count_Persondc/g/Demographics-Count_Person\\" name=\\"stat-var-hierarchy\\" type=\\"checkbox\\"><label class=\\"selected-node-title dc-chart-exist\\" for=\\"Count_Persondc/g/Demographics-Count_Person\\">Count Of Person</label></form>
      </div>
      <div>
        <form class=\\"node-title\\"><input id=\\"Median_Age_Persondc/g/Demographics-Median_Age_Person\\" name=\\"stat-var-hierarchy\\" type=\\"checkbox\\"><label class=\\"\\" for=\\"Median_Age_Persondc/g/Demographics-Median_Age_Person\\">Median age of person</label></form>
      </div>
    </div>
    <div class=\\"svg-node-child\\">
      <div>
        <div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Age<span class=\\"sv-count\\">(5)</span></span></div></span>
        <div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
          <div class=\\"Collapsible__contentInner\\"></div>
        </div>
      </div>
    </div>
    <div>
      <div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">ArmedForcesStatus<span class=\\"sv-count\\">(5)</span></span></div></span>
      <div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
        <div class=\\"Collapsible__contentInner\\"></div>
      </div>
    </div>
  </div>
</div>
</div>
</div>
</div>
<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Economics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>"
`;

exports[`chart options 1`] = `
"<div class=\\"chart-container dc-chart-holder\\">
  <div class=\\"card\\">
    <div class=\\"statVarChipRegion\\">
      <div class=\\"chip\\"><span class=\\"chip-text chip-clickable-text\\">Population</span><button class=\\"chip-action\\"><i class=\\"material-icons\\">cancel</i></button></div>
    </div>
    <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  </div>
  <div class=\\"chart-footer-container no-bottom-border\\">
    <div class=\\"chart-footer-metadata-section\\">
      <div class=\\"chart-footer-metadata\\"><span>Data from <span><a href=\\"https://www.census.gov/programs-surveys/popest.html\\">census.gov</a></span></span></div>
      <div class=\\"chart-footer-metadata\\"><span>Measurement method: CensusPEPSurvey</span></div>
    </div>
    <div class=\\"chart-footer-options-button\\"><span>Chart Options</span><i class=\\"material-icons\\">expand_less</i></div>
  </div>
  <div class=\\"chart-footer-options-section\\"><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"count-ratio\\" type=\\"checkbox\\" class=\\"form-check-input\\">Per Capita</label></div></span><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"delta-cb-count\\" type=\\"checkbox\\" class=\\"is-delta-input form-check-input\\">Delta</label></div></span><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button></div>
  <div class=\\"feedback-link\\"><a href=\\"/feedback\\">Feedback</a></div>
</div>"
`;

exports[`statVar not in PV-tree 1`] = `
"<div class=\\"chart-container dc-chart-holder\\">
  <div class=\\"card\\">
    <div class=\\"statVarChipRegion\\">
      <div class=\\"chip\\"><span class=\\"chip-text chip-clickable-text\\"></span><button class=\\"chip-action\\"><i class=\\"material-icons\\">cancel</i></button></div>
    </div>
    <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  </div>
  <div class=\\"chart-footer-container no-bottom-border\\">
    <div class=\\"chart-footer-metadata-section\\">
      <div class=\\"chart-footer-metadata\\"><span>Data from <span><a href=\\"https://www.census.gov/programs-surveys/popest.html\\">census.gov</a></span></span></div>
      <div class=\\"chart-footer-metadata\\"><span>Measurement method: CensusPEPSurvey</span></div>
    </div>
    <div class=\\"chart-footer-options-button\\"><span>Chart Options</span><i class=\\"material-icons\\">expand_less</i></div>
  </div>
  <div class=\\"chart-footer-options-section\\"><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"count-ratio\\" type=\\"checkbox\\" class=\\"form-check-input\\">Per Capita</label></div></span><span class=\\"chart-option\\"><div class=\\"form-check\\"><label class=\\"form-check-label\\"><input id=\\"delta-cb-count\\" type=\\"checkbox\\" class=\\"is-delta-input form-check-input\\">Delta</label></div></span><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button></div>
  <div class=\\"feedback-link\\"><a href=\\"/feedback\\">Feedback</a></div>
</div>"
`;

exports[`statVar not in PV-tree 2`] = `
"<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Demographics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>
<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Economics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>"
`;
